# BYOM-Bench

./: .env.example  .gitignore  BRING_YOUR_OWN_MEMORY.md  CHANGELOG.md  PLAN.md  QUICK_START.md  README.md  RESULTS.md  agent_system_prompt.txt  aws_memory_bank.py  client_config.yaml  debug.ipynb  debug_score_inflation.py  debug_score_inflation_results.json  demo.py  gather_results.py  google_memory_bank  google_memory_bank.py  memory_tool_error.py  prompt_config.yaml  pyproject.toml  render_prompts.py  results.xlsx  run_agent_context.sh  run_all_categories.py  test_data_generation.py  test_evaluation.py  test_event_generation.py  test_multisession.py  test_persona_generation.py  test_pipeline.py  test_task_generation.py  utils.py
.github/workflows/: gitleaks.yml
byom_bench/: __init__.py  client.py  schemas.py
byom_bench/agents/: _baseline.py
byom_bench/agents/stores/: protocol.py  zep.py
byom_bench/data_generators/: multisession.py
byom_bench/evaluation_multisession/: runner.py  user_simulator.py
byom_bench/prompts/: __init__.py
byom_bench/prompts/agents/: agent_system_memory.yaml  agent_system_no_context.yaml
byom_bench/prompts/evaluation/: efficiency_judge_system_v5.yaml  preference_judge_user_v4.yaml
byom_bench/prompts/user_simulator/: user_simulator_system_v11e2.yaml
configs/: base_personas.txt  client_config.yaml  llm.yaml  pipeline.yaml  prompt_config.yaml  prompts.yaml
configs/agents/: aws.yaml  foundry.yaml  foundry_local.yaml  google.yaml  hindsight.yaml  mem0.yaml  mem0_graph.yaml  zep.yaml
data/: base_personas.json  base_personas_test.json  domains.txt  generate_personas.py
data/debug_data/: eval_aws.json  eval_foundry_local.json  eval_google.json  eval_mem0.json  eval_mem0_graph.json  eval_zep.json  sessions.json  task_01.json
datasets/v1/2026-03-01_222137_744926/: sessions.json
datasets/v1/2026-03-01_222137_745120/: sessions.json
datasets/v1/2026-03-01_222137_745549/: sessions.json
datasets/v1/2026-03-01_222137_746033/: sessions.json
datasets/v1/2026-03-01_222137_757108/: sessions.json
docs/: data_generation_workflow_1.mmd  data_generation_workflow_2.mmd  evaluation_workflow_1.mmd  evaluation_workflow_2.mmd  foundry_memory_agent.py  memory_benchmark_doc.md  pipeline_overview.md  task_generation_workflow.mmd
memory_gym/: __init__.py  client.py  formatting.py  schemas.py
memory_gym/agents/: __init__.py  _baseline.py  _foundry_local_memory.py  _tool_calling.py  aws_agent.py  base.py  context_aware.py  foundry_agent.py  foundry_local_agent.py  google_agent.py  memory_agent.py  no_context.py
memory_gym/data_generators/: __init__.py  base.py  multisession.py
memory_gym/evaluation_multisession/: __init__.py  judge.py  runner.py  user_simulator.py
memory_gym/prompts/: __init__.py
memory_gym/task_generators/: __init__.py  evaluation_task.py
persona_gym/: README.md  __init__.py  agent.py  client.py  config.yaml  data_generation.py  evaluation.py  evaluation_v1.py  metric.py  schemas.py  task_generator.py  task_generator_v1.py  tool_simulator.py
persona_gym/agents/: __init__.py  base.py  context_aware.py  foundry_agent.py  no_context.py
persona_gym/data_generators/: __init__.py  base.py  multisession.py  personamem.py  personamem_v2.py
persona_gym/docs/: pipeline_overview.md
persona_gym/evaluation_multisession/: __init__.py  judge.py  orchestrator.py  runner.py  user_simulator.py
persona_gym/personamem_core/: __init__.py  prepare_data.py  query_llm.py  schemas.py
persona_gym/personamemv1_core/: __init__.py  prompts.py  schemas.py  utils.py
persona_gym/prompts/: __init__.py
persona_gym/task_generators/: __init__.py  evaluation_task.py
prompt_renders/agents/: agent_system_memory.txt  agent_system_with_context.txt
prompt_renders/data_generation/: event_summary_user.txt
prompt_renders/evaluation/: efficiency_judge_system.txt  efficiency_judge_user.txt  preference_judge_system.txt  preference_judge_user.txt
prompt_renders/user_simulator/: user_simulator_system.txt  user_simulator_user.txt
ream_bench/: __init__.py  client.py  formatting.py  schemas.py  utils.py
ream_bench/agents/: __init__.py  _baseline.py  context_aware.py  memory_agent.py  no_context.py
ream_bench/data_generators/: __init__.py  multisession.py
ream_bench/evaluation_multisession/: __init__.py  judge.py  runner.py  user_simulator.py
ream_bench/prompts/: __init__.py
ream_bench/task_generators/: evaluation_task.py
samples/: sessions.json
samples/evaluation/: eval_01_context.json  eval_01_foundry.json  eval_01_nocontext.json  eval_02_context.json  eval_02_nocontext.json  eval_03_context.json  eval_03_nocontext.json  eval_04_context.json  eval_04_nocontext.json  eval_05_context.json  eval_05_nocontext.json  eval_06_context.json  eval_06_nocontext.json
samples/tasks/: task_01.json  task_02.json  task_03.json  task_04.json  task_05.json  task_06.json
scripts/: docker_hindsight_smoke.sh  gather_results.py  quality_check.py  rerun_judge.py  smoke_test_agents.py  smoke_test_hindsight.py  test_data_generation.py  test_evaluation.py  test_task_generation.py  upload_data.py
test_prompts/: _utils.py  test_agent_system_no_context.py  test_agent_system_with_context.py  test_efficiency_judge_instruction.py  test_efficiency_judge_system.py  test_evaluation_task_instruction.py  test_evaluation_task_instruction_v2.py  test_evaluation_task_instruction_v4.py  test_evaluation_task_system.py  test_expand_persona_instruction.py  test_generate_life_story_instruction.py  test_generate_life_story_instruction_v2.py  test_generate_session_conversation_instruction.py  test_preference_judge_instruction.py  test_preference_judge_system.py  test_update_preferences_instruction.py  test_update_preferences_instruction_v2.py  test_user_prompt_generation.py  test_user_prompt_generator_system.py  test_user_simulator_instruction.py  test_user_simulator_system.py
tests/: conftest.py  test_agents.py  test_evaluation_runner.py  test_gather_results.py  test_preference_timeline.py  test_schemas.py  test_task_generation.py  test_utils.py
(+466 files in other folders)
